@@ -649,7 +649,8 @@ rdf_load_db_no_admin(File, Id) :-
 %	the file administration.
 
 rdf_load_db(File) :-
-	rdf_load_db_no_admin(File, file(File)),
+	file_to_url(File, URL),
+	rdf_load_db_no_admin(File, URL),
 	rdf_sources_(Sources),
 	(   member(Src, Sources),
 	    rdf_md5(Src, MD5),
@@ -779,8 +780,7 @@ close_input(_, Stream) :-
 
 rdf_input(stream(Stream), stream(Stream), BaseURI) :- !,
 	(   stream_property(Stream, file_name(File))
-	->  absolute_file_name(File, Path),
-	    atom_concat('file://', Path, BaseURI)
+	->  file_to_url(File, BaseURI)
 	;   gensym('stream://', BaseURI)
 	).
 rdf_input(Stream, stream(Stream), BaseURI) :-
@@ -788,7 +788,7 @@ rdf_input(Stream, stream(Stream), BaseURI) :-
 	rdf_input(stream(Stream), _, BaseURI).
 rdf_input(FileURL, file(File), FileURL) :-
 	atom(FileURL),
-	atom_concat('file://', File, FileURL), !.
+	file_to_url(File, FileURL), !.
 rdf_input(URL, url(Protocol, URL), URL) :-
 	is_url(URL, Protocol), !.
 rdf_input(Spec, file(Path), BaseURI) :-
@@ -797,8 +797,22 @@ rdf_input(Spec, file(Path), BaseURI) :-
 			   [ access(read),
 			     extensions(Exts)
 			   ]),
-	atom_concat('file://', Path, BaseURI).
+	file_to_url(Path, BaseURI).
 	
+%%	file_to_url(+File, -URL) is det.
+%%	file_to_url(-File, +URL) is semidet.
+%
+%	Translate betweem a filename and a URL.
+%	
+%	@tbd	Deal with encoding?
+
+file_to_url(File, FileURL) :-
+	nonvar(File), !,
+	absolute_file_name(File, Path),
+	atom_concat('file://', Path, FileURL), !.
+file_to_url(File, FileURL) :-
+	atom_concat('file://', File, FileURL), !.
+
 %%	is_url(+Term, -Protocol) is semidet.
 %
 %	True if Term is an atom denoting a URL of the given Protocol.
@@ -864,7 +878,9 @@ rdf_file_type(trp,  triples).
 %	@tbd	Handle mime-types?
 
 rdf_load_stream(xml, Stream, Options) :- !,
-	process_rdf(Stream, assert_triples, Options).
+	option(base_uri(Id), Options),
+	rdf_transaction(process_rdf(Stream, assert_triples, Options),
+			parse(Id)).
 rdf_load_stream(triples, Stream, Options) :- !,
 	option(base_uri(Id), Options),
 	rdf_load_db_(Stream, Id).
